# python-sql-repository

./: .gitignore  pyproject.toml
repository/: base_repository.py
test/: test_repository.py
